--- a/src/components/Sidebar/style.module.css
+++ b/src/components/Sidebar/style.module.css
@@ -59,3 +59,9 @@
         justify-content: center;
     }
 }
+
+@media screen and (max-width: 768px) {
+    .Sidebar div:last-child {
+        display: none;
+    }
+}
