--- a/src/pages/Video/style.module.css
+++ b/src/pages/Video/style.module.css
@@ -188,6 +188,15 @@
         border-radius: 0;
         padding: 20px 0;
         justify-content: space-between;
+        overflow: scroll;
+    }
+
+    .Video {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     .Top,
@@ -197,5 +206,13 @@
 
     .Top {
         padding-bottom: 60px;
+        position: absolute;
+        width: 100%;
+    }
+
+    .Controlls {
+        position: absolute;
+        align-items: center;
+        bottom: 20px;
     }
 }
