--- a/src/components/Landing/Sections/9/style.module.css
+++ b/src/components/Landing/Sections/9/style.module.css
@@ -109,6 +109,7 @@
     .Items2 {
         gap: 16px;
         flex-direction: column;
+        height: 100%;
     }
 
     .Items2 div:first-child {
