--- a/src/components/Landing/Sections/9/style.module.css
+++ b/src/components/Landing/Sections/9/style.module.css
@@ -109,7 +109,6 @@
     .Items2 {
         gap: 16px;
         flex-direction: column;
-        height: 100%;
     }
 
     .Items2 div:first-child {
@@ -120,6 +119,10 @@
 @media screen and (max-width: 700px) {
     .Items {
         grid-template-columns: repeat(1, 1fr);
+    }
+
+    .Items div {
+        height: fit-content;
     }
 
     .Items div h3,
