--- a/src/components/MobileAuthModal/style.module.css
+++ b/src/components/MobileAuthModal/style.module.css
@@ -5,7 +5,7 @@
     top: 0;
     left: 0;
     background: rgba(0, 0, 0, 0.24);
-    display: flex;
+    display: none;
     align-items: flex-end;
 }
 
@@ -84,4 +84,10 @@
 
 .List div.Active {
     background: #FF87021A;
+}
+
+@media screen and (max-width: 768px) {
+    .Modal {
+        display: flex;
+    }
 }
