--- a/src/pages/Filter/style.module.css
+++ b/src/pages/Filter/style.module.css
@@ -218,6 +218,7 @@
     display: flex;
     align-items: center;
     gap: 8px;
+    flex-wrap: wrap;
 }
 
 .RowItems div {
@@ -230,6 +231,49 @@
     border-radius: 7px;
     font-size: 14px;
     color: #fff;
+}
+
+.Grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+}
+
+.GridItem {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    background: #FFFFFF;
+    box-shadow: 2px 4px 10px 0px #B6A1C01C;
+    padding: 20px;
+    border-radius: 13px;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.GridItem div {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+
+.GridItem.Active {
+    background: #FF87021A;
+    box-shadow: none;
+}
+
+.GridItem div h4 {
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 24.55px;
+    color: #23232B;
+}
+
+.GridItem div p {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 21.82px;
+    color: #23232B;
 }
 
 @media screen and (max-width: 768px) {
@@ -258,5 +302,20 @@
 
     .Page .Container>div:first-child {
         display: none;
+    }
+
+    .Grid {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .ButtonBox {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 10px;
+        background: #fff;
     }
 }
