--- a/src/pages/Specialists/style.module.css
+++ b/src/pages/Specialists/style.module.css
@@ -47,6 +47,13 @@
     border-radius: 100%;
     object-fit: cover;
     object-position: center top;
+    cursor: pointer;
+    transition: 0.5s;
+    border: 1px solid #fff;
+}
+
+.SpecialistsBox img.ActiveAvatar {
+    border: 1px solid #FF8702;
 }
 
 .Avatars {
@@ -256,6 +263,18 @@
     color: #AFABA8;
 }
 
+.ButtonBox {
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 0;
+}
+
 @media screen and (max-width: 1000px) {
     .Avatars {
         overflow-x: scroll;
@@ -279,7 +298,7 @@
         padding: 0;
         box-shadow: none;
         gap: 0;
-        padding-bottom: 100px;
+        padding-bottom: 150px;
     }
 
     .Title {
@@ -329,11 +348,7 @@
     }
 
     .ButtonBox {
-        width: 100%;
-        padding: 0 20px;
-    }
-
-    .ButtonBox button {
-        width: 100%;
+        bottom: 70px;
+        z-index: 100;
     }
 }
