--- a/src/components/Sidebar/style.module.css
+++ b/src/components/Sidebar/style.module.css
@@ -33,6 +33,10 @@
     color: #FF8702;
 }
 
+.Sidebar div:nth-child(4) {
+    display: none;
+}
+
 @media screen and (max-width:1160px) {
     .Sidebar {
         position: fixed;
@@ -63,5 +67,9 @@
 @media screen and (max-width: 768px) {
     .Sidebar div:last-child {
         display: none;
+    }
+
+    .Sidebar div:nth-child(4) {
+        display: flex;
     }
 }
