--- a/src/pages/Test/style.module.css
+++ b/src/pages/Test/style.module.css
@@ -1,203 +1,204 @@
 .Page {
-    width: 100%;
-    min-height: calc(100vh - 94px);
-    display: flex;
-    justify-content: center;
-    background: url("/Background.png") no-repeat;
-    background-size: cover;
+  width: 100%;
+  min-height: calc(100vh - 94px);
+  display: flex;
+  justify-content: center;
+  background: url("/Background.png") no-repeat;
+  background-size: cover;
 }
 
 .Container {
-    padding: 40px 0;
-    max-width: 875px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
+  padding: 40px 0;
+  max-width: 875px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
 }
 
 .Top {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    color: #fff;
-    padding: 0 20px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #fff;
+  padding: 0 20px;
 }
 
 .Top p {
-    font-size: 18px;
+  font-size: 18px;
 }
 
 .Top svg {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .Box {
-    width: 100%;
-    border-radius: 20px;
-    padding: 75px 55px;
-    background: #fff;
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
+  width: 100%;
+  border-radius: 20px;
+  padding: 75px 55px;
+  background: #fff;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
 
 .Box h2 {
-    color: #23232B;
-    font-size: 36px;
-    font-weight: 800;
+  color: #23232b;
+  font-size: 36px;
+  font-weight: 800;
 }
 
 .Box p {
-    color: #23232B;
-    font-size: 18px;
-    font-weight: 400;
+  color: #23232b;
+  font-size: 18px;
+  font-weight: 400;
 }
 
 .Box button {
-    max-width: 335px;
-    width: 100%;
-    align-self: center;
+  max-width: 335px;
+  width: 100%;
+  align-self: center;
 }
 
 .Controlls {
-    width: 100%;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    align-items: center;
+  width: 100%;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  align-items: center;
 }
 
 .Controlls .Group {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .Controlls svg {
-    width: 16px;
-    height: 16px;
-    cursor: pointer;
+  width: 16px;
+  height: 16px;
+  cursor: pointer;
 }
 
 .Controlls .Group div {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  cursor: pointer;
 }
 
 .Controlls div:nth-child(2) {
-    height: 5px;
-    border-radius: 100px;
+  height: 5px;
+  border-radius: 100px;
 }
 
-.Controlls div:nth-child(2)>div {
-    background: #fff;
+.Controlls div:nth-child(2) > div {
+  background: #fff;
 }
 
-.Controlls div:nth-child(2)>p {
-    display: none;
+.Controlls div:nth-child(2) > p {
+  display: none;
 }
 
 .Controlls h3 {
-    text-align: center;
+  text-align: center;
 }
 
 .ButtonGrid {
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
 }
 
 .CheckButton {
-    width: 100%;
-    height: 52px;
-    border-radius: 16px;
-    border: 2px solid #E8E8E8;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 15px;
-    color: #4C4C69;
-    font-size: 18px;
-    font-weight: 500;
-    cursor: pointer;
-    transition: 0.5s;
+  width: 100%;
+  padding: 12px 15px;
+  border-radius: 16px;
+  border: 2px solid #e8e8e8;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #4c4c69;
+  font-size: 18px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: 0.5s;
+  gap: 10px;
 }
 
 .CheckButton.Active {
-    border-color: #FF8702;
+  border-color: #ff8702;
 }
 
 .CheckButton div {
-    border: 1.54px solid #FF8702;
-    background: #FF8702B2;
-    width: 20px;
-    height: 20px;
-    border-radius: 100%;
-    color: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: 0.5s;
-    opacity: 0;
+  border: 1.54px solid #ff8702;
+  background: #ff8702b2;
+  width: 20px;
+  min-width: 20px;
+  height: 20px;
+  border-radius: 100%;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.5s;
+  opacity: 0;
 }
 
 .CheckButton.Active div {
-    opacity: 1;
+  opacity: 1;
 }
 
 .CheckButton div svg {
-    width: 12px;
-    height: 12px;
+  width: 12px;
+  height: 12px;
 }
 
 .Close {
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .Back {
-    width: 100%;
+  width: 100%;
 }
 
 @media screen and (max-width: 768px) {
-    .Box h2 {
-        font-size: 24px;
-    }
+  .Box h2 {
+    font-size: 24px;
+  }
 
-    .Box p {
-        font-size: 14px;
-    }
+  .Box p {
+    font-size: 14px;
+  }
 
-    .Container {
-        justify-content: space-between;
-        height: 100vh;
-        padding: 0;
-    }
+  .Container {
+    justify-content: space-between;
+    height: 100vh;
+    padding: 0;
+  }
 
-    .Page {
-        min-height: 100vh;
-        max-height: 100vh;
-    }
+  .Page {
+    min-height: 100vh;
+    max-height: 100vh;
+  }
 
-    .Top,
-    .Controlls {
-        padding: 20px 20px 0 20px;
-    }
+  .Top,
+  .Controlls {
+    padding: 20px 20px 0 20px;
+  }
 
-    .Box {
-        padding: 30px 20px 15px 20px;
-        border-radius: 30px 30px 0 0;
-    }
+  .Box {
+    padding: 30px 20px 15px 20px;
+    border-radius: 30px 30px 0 0;
+  }
 
-    .ButtonGrid {
-        grid-template-columns: repeat(1, 1fr);
-    }
+  .ButtonGrid {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
