--- a/src/index.css
+++ b/src/index.css
@@ -81,3 +81,64 @@ html {
   background: #FF8702;
   box-shadow: none !important;
 }
+
+/* Video Call */
+.VsTVUAD89KWleD0YRVsD {
+  background: #FF8702 !important;
+  border-radius: 100px !important;
+}
+
+.TYiiRFB3EhYJGVPE4k4q {
+  border: 1px solid #BCBCBF !important;
+  border-radius: 100px !important;
+}
+
+.sCsSbKP9yxvw4LQAeaTz {
+  background: #fff !important;
+}
+
+.ji5jASszKFf2CGCmbxEh {
+  background: transparent !important;
+  position: absolute !important;
+  bottom: 10px;
+  z-index: 1000;
+}
+
+.QajuHzlZleFtiTUp_E8u.zzHlKp_IVmgXBPV3Jv58 {
+  padding: 50px 8px !important;
+}
+
+.QAHxuJxRZWb3P_cbR8QA {
+  padding: 0 !important;
+  border-radius: 0 !important;
+}
+
+.Xfk1RtGH65gHx0iQ5uPA .GBqD5akUB0siCNWbAPQr {
+  border-radius: 0 !important;
+}
+
+.R5UUhzsZdRHH4U5V6kon {
+  top: 10px;
+  height: fit-content;
+}
+
+.j9ygOVxEl2nClTPs77Ta {
+  background: #fff !important;
+  padding: 50px 0;
+}
+
+.j9ygOVxEl2nClTPs77Ta * {
+  color: #000 !important;
+}
+
+.IughcowXVrJ5wcOf6vH9 {
+  background: #FF8702 !important;
+  color: #fff !important;
+  border-radius: 100px !important;
+}
+
+.mCx2N1NwuMWObjjTeG0q {
+  border: 1px solid #BCBCBF !important;
+  border-radius: 100px !important;
+  color: #BCBCBF !important;
+}
